--- a/src/pages/sponsors.astro
+++ b/src/pages/sponsors.astro
@@ -8,7 +8,7 @@ import sponsors from '@data/sponsors.json'
 
 <BaseLayout title="Sponsors">
 	<!-- INTRO -->
-	<article class="content-container mb-6">
+	<article class="content-container mb-3 sm:mb-6">
 		<p class="content">
 			<Markdown>
 				Strong support from business donors will be the key to our success. Your tax-deductible contribution will help to pay for the many expenses and logistics associated with this amazing event.
@@ -18,16 +18,16 @@ import sponsors from '@data/sponsors.json'
 		</p>
 	</article>
 
-	<div class="flex">
-		<div class="w-2/3 pr-3">
+	<div class="flex flex-wrap md:flex-nowrap">
+		<div class="w-full md:w-2/3 md:pr-3">
 
 			<!-- READY TO PARTICIPATE? -->
-			<article class="content-container mb-6">
+			<article class="content-container mb-3 sm:mb-6">
 				<Title title="Ready to Participate?"/>
 				<p class="content">
 					<Markdown>
 						HONK! Fest West is fiscally sponsored by Shunpike, a 501(c)(3) non-profit organization that supports the arts, as our fiscal sponsor. Donations can be made via check to:
-						<span class="flex flex-col items-center text-center block my-5">
+						<span class="flex flex-col items-center text-center block my-4 sm:my-5">
 							**Shunpike**
 
 							**(HONK! Fest West in the memo line)**
@@ -39,31 +39,34 @@ import sponsors from '@data/sponsors.json'
 				</p>
 			</article>
 
-			<article class="content-container mb-6">
+			<article class="content-container mb-3 sm:mb-6">
 				<Title title="Arts Support Organizations"/>
 				<p class="content">
 					<Markdown>
 						We thank [Shunpike](http://shunpike.org/), a 501(c)(3) non-profit agency that provides independent arts groups in Washington State with the services, resources, and opportunities they need to forge their own paths to sustainable success.
 					</Markdown>
 					<a class="block" href={sponsors.shunpike.link} >
-						<img class="rounded p-2 bg-[#f4efdf] h-24 mx-auto my-5" src={sponsors.shunpike.image} alt={sponsors.shunpike.name}/>
+						<img class="rounded p-2 bg-[#f4efdf] h-20 sm:h-24 mx-auto my-5" src={sponsors.shunpike.image} alt={sponsors.shunpike.name}/>
 					</a>
+					<span class="border-b-4 border-opacity-30 border-accent-color border-dotted w-full block mb-3"/>
 					<Markdown>
 						HONK! Fest West is supported, in part, by grant awards from [4Culture](http://www.4culture.org/), the Community Investments Fund of [Tides Foundation](http://www.tides.org/) and [King County Local Services](https://https//www.kingcounty.gov).
 					</Markdown>
-					<span class="block flex justify-around my-5">
+					<span class="block flex flex-wrap sm:flex-nowrap justify-around mt-2 sm:mb-5">
 						{sponsors.arts.map((sponsor) => (
 							<a class="block" href={sponsor.link} >
-								<img class="rounded p-1 bg-white h-20" src={sponsor.image} alt={sponsor.name}/>
+								<img class="rounded p-1 bg-white h-16 lg:h-20 mb-3 sm:mb-0" src={sponsor.image} alt={sponsor.name}/>
 							</a>	
 						))}
 					</span>
+					<span class="border-b-4 border-opacity-30 border-accent-color border-dotted w-full block mb-3"/> 
 					<Markdown>	
 						This project is funded in part by a Neighborhood Matching Fund award from [Seattle Department of Neighborhoods](https://www.seattle.gov/neighborhood).
 					</Markdown>
-					<a class="block" href={sponsors.neighborhoods.link} >
-						<img class="rounded h-24 mx-auto my-5" src={sponsors.neighborhoods.image} alt={sponsors.neighborhoods.name}/>
+					<a class="block mb-5" href={sponsors.neighborhoods.link} >
+						<img class="rounded h-20 sm:h-24 mx-auto mt-2" src={sponsors.neighborhoods.image} alt={sponsors.neighborhoods.name}/>
 					</a>
+					<span class="border-b-4 border-opacity-30 border-accent-color border-dotted w-full block mb-3"/>
 					<Markdown>
 						We thank the original [HONK! festival](http://honkfest.org/)—the mothership—which inspired our festival and has since seen other offspring arise in Austin, Detroit, Australia, Brazil and beyond!
 					</Markdown>
@@ -72,12 +75,12 @@ import sponsors from '@data/sponsors.json'
 		</div>
 
 		<!-- SPONSORSHIP LEVELS -->
-		<div class="w-1/3 pl-3">
+		<div class="w-full md:w-1/3 md:pl-3">
 			<div class="content-container">
 				<Title title="Sponsorship Levels" classes="text-center"/>
 
 				<!-- GRAND MARSHALL -->
-				<h3 class="font-emphasis text-accent-color text-3xl text-center mt-6">
+				<h3 class="font-emphasis text-accent-color text-2xl sm:text-3xl text-center mt-4 sm:mt-6">
 					<a href="https://poweredbyshunpike.org/c/PBS/a/honkfestwest/Donate?t=5000">GRAND MARSHALL</a>
 					<span class="text-gray-500"> $5,000+</span>
 				</h3>
@@ -96,7 +99,7 @@ import sponsors from '@data/sponsors.json'
 				</div>
 
 				<!-- TOP BRASS -->
-				<h3 class="font-emphasis text-accent-color text-3xl text-center mt-6">
+				<h3 class="font-emphasis text-accent-color text-2xl sm:text-3xl text-center mt-4 sm:mt-6">
 					<a href="https://poweredbyshunpike.org/c/PBS/a/honkfestwest/Donate?t=2500">TOP BRASS</a>
 					<span class="text-gray-500"> $2,500</span>
 				</h3>
@@ -114,7 +117,7 @@ import sponsors from '@data/sponsors.json'
 				</div>
 
 				<!-- HORN STAR -->
-				<h3 class="font-emphasis text-accent-color text-3xl text-center mt-6">
+				<h3 class="font-emphasis text-accent-color text-2xl sm:text-3xl text-center mt-4 sm:mt-6">
 					<a href="https://poweredbyshunpike.org/c/PBS/a/honkfestwest/Donate?t=2500">HORN STAR</a>
 					<span class="text-gray-500"> $1,000</span>
 				</h3>
@@ -128,7 +131,7 @@ import sponsors from '@data/sponsors.json'
 				</div>
 
 				<!-- BAND BOOSTER -->
-				<h3 class="font-emphasis text-accent-color text-3xl text-center mt-6">
+				<h3 class="font-emphasis text-accent-color text-2xl sm:text-3xl text-center mt-4 sm:mt-6">
 					<a href="https://poweredbyshunpike.org/c/PBS/a/honkfestwest/Donate?t=500">HORN STAR</a>
 					<span class="text-gray-500"> $500</span>
 				</h3>
@@ -140,7 +143,7 @@ import sponsors from '@data/sponsors.json'
 				</div>
 
 				<!-- IN-KIND CONTRIBUTION -->
-				<h3 class="font-emphasis text-accent-color text-3xl text-center mt-6">
+				<h3 class="font-emphasis text-accent-color text-2xl sm:text-3xl text-center mt-4 sm:mt-6">
 					<a href="https://poweredbyshunpike.org/c/PBS/a/honkfestwest/Donate?t=500">IN-KIND CONTRIBUTION</a>
 				</h3>
 				<div class="content">
