--- a/src/components/BaseHead/Fonts.astro
+++ b/src/components/BaseHead/Fonts.astro
@@ -1,3 +1,7 @@
-<link rel="preconnect" href="https://fonts.googleapis.com">
+<!-- <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Poppins:wght@400;600&family=Teko:wght@500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Poppins:wght@400;600&family=Teko:wght@500&display=swap" rel="stylesheet"> -->
+
+<style>
+	@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Poppins:wght@400;600&family=Teko:wght@500&display=swap');
+</style>
