--- a/src/components/BaseHead/Google.astro
+++ b/src/components/BaseHead/Google.astro
@@ -1,15 +1,11 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script
-	async
-	src="https://www.googletagmanager.com/gtag/js?id=UA-134727434-1"
-></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EEQH9FZEJD"></script>
 <script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag() {
-	dataLayer.push(arguments);
-	}
-	gtag('js', new Date());
-	gtag('config', 'UA-134727434-1');
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EEQH9FZEJD');
 </script>
 
 <meta
